--- a/index.html
+++ b/index.html
@@ -11,40 +11,87 @@
     <title>Pricing</title>
   </head>
   <body>
-    <h1 class="text-accent">pricing</h1>
-    <p class="fs-500">plans that work for everyone</p>
+    <section class="pricing">
+      <h2 class="heading-title text-accent">pricing</h2>
+      <p class="fs-500">plans that work for everyone</p>
 
-    <div class="plans">
-      <div class="plan plan--light">
-        <h2 class="plan__title">basic</h2>
-        <p class="plan__price text-accent">$4.99<span>/month</span></p>
-        <p class="plan__description">
-          Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat cursus
-          justo
-        </p>
-        <a href="#" class="button button--dark">Join Now</a>
+      <div class="plans">
+        <div class="plan bg-light">
+          <h2 class="plan__title">basic</h2>
+          <p class="plan__price text-accent">$4.99<span>/month</span></p>
+          <p class="plan__description">
+            Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat
+            cursus justo
+          </p>
+          <a href="#" class="button">Join Now</a>
+        </div>
+        <div class="plan bg-accent">
+          <h2 class="plan__title">super</h2>
+          <p class="plan__price">$19.99<span>/month</span></p>
+          <p class="plan__description">
+            Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat
+            cursus justo
+          </p>
+          <a href="#" class="button">Join Now</a>
+        </div>
+        <div class="plan bg-dark">
+          <h2 class="plan__title">Enterprise</h2>
+          <p class="plan__price text-accent">$49.99<span>/month</span></p>
+          <p class="plan__description">
+            Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat
+            cursus justo
+          </p>
+          <a href="#" class="button">Join Now</a>
+        </div>
       </div>
-      <div class="plan plan--accent">
-        <h2 class="plan__title">super</h2>
-        <p class="plan__price">$19.99<span>/month</span></p>
-        <p class="plan__description">
-          Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat cursus
-          justo
-        </p>
-        <a href="#" class="button button--light">Join Now</a>
-      </div>
-      <div class="plan plan--light">
-        <h2 class="plan__title">Enterprise</h2>
-        <p class="plan__price text-accent">$49.99<span>/month</span></p>
-        <p class="plan__description">
-          Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat cursus
-          justo
-        </p>
-        <a href="#" class="button button--dark">Join Now</a>
-      </div>
-    </div>
 
-    <p class="fs-500">Need something different? No problem!</p>
-    <a href="#" class="button">Get in touch</a>
+      <p class="fs-500">Need something different? No problem!</p>
+      <a href="#" class="button">Get in touch</a>
+    </section>
+
+    <section class="team">
+      <div class="container">
+        <h2 class="heading-title text-accent">our team</h2>
+        <p class="fs-500">Get to know us a little</p>
+
+        <div class="team-members">
+          <div class="member bg-light">
+            <img src="img/team-01.jpg" alt="member-01" class="member__image" />
+            <div class="member__info">
+              <h3 class="member__name">Adriana Ramirez</h3>
+              <p class="member__position">Lead UI/UX</p>
+              <p>Sed sit tellus sit mauris sit hendrerit pellentesque.</p>
+            </div>
+          </div>
+
+          <div class="member bg-light">
+            <img src="img/team-02.jpg" alt="member-02" class="member__image" />
+            <div class="member__info">
+              <h3 class="member__name">Calvin Miles</h3>
+              <p class="member__position">UI/UX Designer</p>
+              <p>Sed sit tellus sit mauris sit hendrerit pellentesque.</p>
+            </div>
+          </div>
+
+          <div class="member bg-dark member--mirrored">
+            <img src="img/team-03.jpg" alt="member-03" class="member__image" />
+            <div class="member__info">
+              <h3 class="member__name">Hardy Smith</h3>
+              <p class="member__position">Lead developer</p>
+              <p>Sed sit tellus sit mauris sit hendrerit pellentesque.</p>
+            </div>
+          </div>
+
+          <div class="member bg-dark member--mirrored">
+            <img src="img/team-04.jpg" alt="member-04" class="member__image" />
+            <div class="member__info">
+              <h3 class="member__name">Janae Watts</h3>
+              <p class="member__position">Front-end developer</p>
+              <p>Sed sit tellus sit mauris sit hendrerit pellentesque.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
