overlooked warm up

--- a/index.html
+++ b/index.html
@@ -3,94 +3,177 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Podkova:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>Pricing</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Hire Us</title>
   </head>
   <body>
-    <section class="pricing">
-      <h2 class="heading-title text-accent">pricing</h2>
-      <p class="fs-500">plans that work for everyone</p>
+    <section class="candidates">
+      <div class="candidate">
+        <h2 class="candidate__name">John Smith</h2>
+        <img src="img/john.jpg" alt="image candidate-01" class="candidate__image" />
+        <p class="candidate__roles">
+          <span class="tag ui">UI Design</span>
+          <span class="tag ux">UX Design</span>
+        </p>
+        <p class="candidate__bio">
+          With award winning designs at several agencies and 18 years of experiences, John brings
+          the full package to your team.
+        </p>
 
-      <div class="plans">
-        <div class="plan bg-light">
-          <h2 class="plan__title">basic</h2>
-          <p class="plan__price text-accent">$4.99<span>/month</span></p>
-          <p class="plan__description">
-            Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat
-            cursus justo
-          </p>
-          <a href="#" class="button">Join Now</a>
-        </div>
-        <div class="plan bg-accent">
-          <h2 class="plan__title">super</h2>
-          <p class="plan__price">$19.99<span>/month</span></p>
-          <p class="plan__description">
-            Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat
-            cursus justo
-          </p>
-          <a href="#" class="button">Join Now</a>
-        </div>
-        <div class="plan bg-dark">
-          <h2 class="plan__title">Enterprise</h2>
-          <p class="plan__price text-accent">$49.99<span>/month</span></p>
-          <p class="plan__description">
-            Eleifend cursus volutpat risus convallis nam sed quam sollicitudin eget leo at erat
-            cursus justo
-          </p>
-          <a href="#" class="button">Join Now</a>
-        </div>
+        <ul class="candidate__socials">
+          <li>
+            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
+          </li>
+        </ul>
+
+        <a href="#" class="btn btn-right">Hire</a>
       </div>
 
-      <p class="fs-500">Need something different? No problem!</p>
-      <a href="#" class="button">Get in touch</a>
-    </section>
+      <div class="candidate">
+        <h2 class="candidate__name">Sally Andrews</h2>
+        <img src="img/sally.jpg" alt="image candidate-02" class="candidate__image" />
+        <p class="candidate__roles">
+          <span class="tag ux">UX Design</span>
+        </p>
+        <p class="candidate__bio">I’m energetic, hard working and quick to learn!</p>
 
-    <section class="team">
-      <div class="container">
-        <h2 class="heading-title text-accent">our team</h2>
-        <p class="fs-500">Get to know us a little</p>
+        <ul class="candidate__socials">
+          <li>
+            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
+          </li>
 
-        <div class="team-members">
-          <div class="member bg-light">
-            <img src="img/team-01.jpg" alt="member-01" class="member__image" />
-            <div class="member__info">
-              <h3 class="member__name">Adriana Ramirez</h3>
-              <p class="member__position">Lead UI/UX</p>
-              <p>Sed sit tellus sit mauris sit hendrerit pellentesque.</p>
-            </div>
-          </div>
+          <li>
+            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
+          </li>
 
-          <div class="member bg-light">
-            <img src="img/team-02.jpg" alt="member-02" class="member__image" />
-            <div class="member__info">
-              <h3 class="member__name">Calvin Miles</h3>
-              <p class="member__position">UI/UX Designer</p>
-              <p>Sed sit tellus sit mauris sit hendrerit pellentesque.</p>
-            </div>
-          </div>
+          <li>
+            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
+          </li>
+        </ul>
 
-          <div class="member bg-dark member--mirrored">
-            <img src="img/team-03.jpg" alt="member-03" class="member__image" />
-            <div class="member__info">
-              <h3 class="member__name">Hardy Smith</h3>
-              <p class="member__position">Lead developer</p>
-              <p>Sed sit tellus sit mauris sit hendrerit pellentesque.</p>
-            </div>
-          </div>
+        <a href="#" class="btn btn-right">Hire</a>
+      </div>
 
-          <div class="member bg-dark member--mirrored">
-            <img src="img/team-04.jpg" alt="member-04" class="member__image" />
-            <div class="member__info">
-              <h3 class="member__name">Janae Watts</h3>
-              <p class="member__position">Front-end developer</p>
-              <p>Sed sit tellus sit mauris sit hendrerit pellentesque.</p>
-            </div>
-          </div>
-        </div>
+      <div class="candidate">
+        <h2 class="candidate__name">Rachelle Watson</h2>
+        <img src="img/rachelle.jpg" alt="image candidate-03" class="candidate__image" />
+        <p class="candidate__roles">
+          <span class="tag ui">UI Design</span>
+          <span class="tag ux">UX Design</span>
+        </p>
+        <p class="candidate__bio">
+          Eget nulla pulvinar arcu pellentesque ipsum at id dapibus vestibulum egestas sodales nec
+          nulla nunc interdum posuere aliquet.
+        </p>
+
+        <ul class="candidate__socials">
+          <li>
+            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
+          </li>
+        </ul>
+
+        <a href="#" class="btn btn-right">Hire</a>
+      </div>
+
+      <div class="candidate">
+        <h2 class="candidate__name">Winston Millington</h2>
+        <img src="img/winston.jpg" alt="image candidate-04" class="candidate__image" />
+        <p class="candidate__roles">
+          <span class="tag ui">UI Design</span>
+          <span class="tag dev">Developer</span>
+        </p>
+        <p class="candidate__bio">
+          Ante risus gravida vitae aliquet tristique libero, at blandit volutpat, viverra.
+        </p>
+
+        <ul class="candidate__socials">
+          <li>
+            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
+          </li>
+        </ul>
+
+        <a href="#" class="btn btn-right">Hire</a>
+      </div>
+
+      <div class="candidate">
+        <h2 class="candidate__name">Alex Miller</h2>
+        <img src="img/alex.jpg" alt="image candidate-05" class="candidate__image" />
+        <p class="candidate__roles">
+          <span class="tag ux">UX Design</span>
+        </p>
+        <p class="candidate__bio">Amet magna amet venenatis purus donec eget ultricies urna.</p>
+
+        <ul class="candidate__socials">
+          <li>
+            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
+          </li>
+        </ul>
+
+        <a href="#" class="btn btn-right">Hire</a>
+      </div>
+
+      <div class="candidate">
+        <h2 class="candidate__name">Raymond Smith</h2>
+        <img src="img/raymond.jpg" alt="image candidate-06" class="candidate__image" />
+        <p class="candidate__roles">
+          <span class="tag ui">UI Design</span>
+        </p>
+        <p class="candidate__bio">
+          Tincidunt urna eu posuere lobortis cursus neque quam nulla fringilla pellentesque egestas
+          sem libero aliquam commodo.
+        </p>
+
+        <ul class="candidate__socials">
+          <li>
+            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
+          </li>
+
+          <li>
+            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
+          </li>
+        </ul>
+
+        <a href="#" class="btn btn-right">Hire</a>
       </div>
     </section>
   </body>
