--- a/index.html
+++ b/index.html
@@ -3,177 +3,116 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Podkova:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Our stylesheet -->
     <link rel="stylesheet" href="styles.css" />
-    <title>Hire Us</title>
+    <title>Magic is in the air</title>
   </head>
   <body>
-    <section class="candidates">
-      <div class="candidate">
-        <h2 class="candidate__name">John Smith</h2>
-        <img src="img/john.jpg" alt="image candidate-01" class="candidate__image" />
-        <p class="candidate__roles">
-          <span class="tag ui">UI Design</span>
-          <span class="tag ux">UX Design</span>
-        </p>
-        <p class="candidate__bio">
-          With award winning designs at several agencies and 18 years of experiences, John brings
-          the full package to your team.
-        </p>
-
-        <ul class="candidate__socials">
-          <li>
-            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
-          </li>
-
-          <li>
-            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
-          </li>
-
-          <li>
-            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
-          </li>
-        </ul>
-
-        <a href="#" class="btn btn-right">Hire</a>
+    <section class="hero">
+      <div class="container">
+        <div class="split-gap">
+          <div class="gap gap--large">
+            <h1>
+              Books hard to follow, and YouTube letting you down?
+              <span>Learn magic the right way.</span>
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac
+              auctor ornare, nunc ligula scelerisque eros.
+            </p>
+            <a href="#" class="btn">Start learning</a>
+          </div>
+          <div><img src="assets/hero.jpg" alt="image hero" class="shadow" /></div>
+        </div>
       </div>
+    </section>
 
-      <div class="candidate">
-        <h2 class="candidate__name">Sally Andrews</h2>
-        <img src="img/sally.jpg" alt="image candidate-02" class="candidate__image" />
-        <p class="candidate__roles">
-          <span class="tag ux">UX Design</span>
-        </p>
-        <p class="candidate__bio">I’m energetic, hard working and quick to learn!</p>
-
-        <ul class="candidate__socials">
-          <li>
-            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
+    <section class="bg-dark">
+      <div class="container">
+        <h2 class="text-accent">Start mastering magic today</h2>
+        <ul class="split-gap">
+          <li class="gap">
+            <img src="assets/feature-01.jpg" alt="dice falling into a hand" />
+            <h3>Feeling stuck?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </li>
-
-          <li>
-            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
+          <li class="gap">
+            <img src="assets/feature-02.jpg" alt="cards spread on a table" />
+            <h3>Stop with the excuses</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </li>
-
-          <li>
-            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
+          <li class="gap">
+            <img src="assets/feature-03.jpg" alt="man riffling cards" />
+            <h3>Unlock your potential</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </li>
+          <li class="gap">
+            <img src="assets/feature-04.jpg" alt="teenager doing cardestry" />
+            <h3>Get in the game</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </li>
         </ul>
-
-        <a href="#" class="btn btn-right">Hire</a>
       </div>
+    </section>
 
-      <div class="candidate">
-        <h2 class="candidate__name">Rachelle Watson</h2>
-        <img src="img/rachelle.jpg" alt="image candidate-03" class="candidate__image" />
-        <p class="candidate__roles">
-          <span class="tag ui">UI Design</span>
-          <span class="tag ux">UX Design</span>
-        </p>
-        <p class="candidate__bio">
-          Eget nulla pulvinar arcu pellentesque ipsum at id dapibus vestibulum egestas sodales nec
-          nulla nunc interdum posuere aliquet.
-        </p>
-
-        <ul class="candidate__socials">
-          <li>
-            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
+    <section class="join-now">
+      <div class="container">
+        <h2>Join now and get access to our entire library of tricks</h2>
+        <ul class="split-gap">
+          <li class="gap">
+            <img
+              class="shadow"
+              src="assets/all-access-03.jpg"
+              alt="man with cards flying in front of him"
+            />
+            <h3>Step-by-step instruction</h3>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
           </li>
-
-          <li>
-            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
+          <li class="gap">
+            <img
+              class="shadow"
+              src="assets/all-access-04.jpg"
+              alt="woman and man talking over video conference"
+            />
+            <h3>1-on-1 mentoring</h3>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
           </li>
-
-          <li>
-            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
+          <li class="gap">
+            <img
+              class="shadow"
+              src="assets/all-access-01.jpg"
+              alt="man in front of laptop with earphonese on"
+            />
+            <h3>Video lessons</h3>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
+          </li>
+          <li class="gap">
+            <img
+              class="shadow"
+              src="assets/all-access-02.jpg"
+              alt="close up of hands holding cards"
+            />
+            <h3>Full routines</h3>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
           </li>
         </ul>
-
-        <a href="#" class="btn btn-right">Hire</a>
       </div>
+    </section>
 
-      <div class="candidate">
-        <h2 class="candidate__name">Winston Millington</h2>
-        <img src="img/winston.jpg" alt="image candidate-04" class="candidate__image" />
-        <p class="candidate__roles">
-          <span class="tag ui">UI Design</span>
-          <span class="tag dev">Developer</span>
+    <section class="bg-dark cta">
+      <div class="container gap gap--large">
+        <h2>You’re only one step away</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor
+          ornare.
         </p>
-        <p class="candidate__bio">
-          Ante risus gravida vitae aliquet tristique libero, at blandit volutpat, viverra.
-        </p>
-
-        <ul class="candidate__socials">
-          <li>
-            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
-          </li>
-
-          <li>
-            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
-          </li>
-
-          <li>
-            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
-          </li>
-        </ul>
-
-        <a href="#" class="btn btn-right">Hire</a>
-      </div>
-
-      <div class="candidate">
-        <h2 class="candidate__name">Alex Miller</h2>
-        <img src="img/alex.jpg" alt="image candidate-05" class="candidate__image" />
-        <p class="candidate__roles">
-          <span class="tag ux">UX Design</span>
-        </p>
-        <p class="candidate__bio">Amet magna amet venenatis purus donec eget ultricies urna.</p>
-
-        <ul class="candidate__socials">
-          <li>
-            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
-          </li>
-
-          <li>
-            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
-          </li>
-
-          <li>
-            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
-          </li>
-        </ul>
-
-        <a href="#" class="btn btn-right">Hire</a>
-      </div>
-
-      <div class="candidate">
-        <h2 class="candidate__name">Raymond Smith</h2>
-        <img src="img/raymond.jpg" alt="image candidate-06" class="candidate__image" />
-        <p class="candidate__roles">
-          <span class="tag ui">UI Design</span>
-        </p>
-        <p class="candidate__bio">
-          Tincidunt urna eu posuere lobortis cursus neque quam nulla fringilla pellentesque egestas
-          sem libero aliquam commodo.
-        </p>
-
-        <ul class="candidate__socials">
-          <li>
-            <a href="#" aria-label="dribble"><img src="img/dribble.svg" alt="dribble" /></a>
-          </li>
-
-          <li>
-            <a href="#" aria-label="twitter"><img src="img/twitter.svg" alt="twitter" /></a>
-          </li>
-
-          <li>
-            <a href="#" aria-label="instagram"><img src="img/instagram.svg" alt="instagram" /></a>
-          </li>
-        </ul>
-
-        <a href="#" class="btn btn-right">Hire</a>
+        <a href="#" class="btn">Start Learning</a>
       </div>
     </section>
   </body>
