--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <div class="container">
           <div class="split-gap a-center">
             <div class="gap gap--large">
-              <h1>
+              <h1 class="section-title">Start learning magic today</h1>
+              <p class="h2 page-heading">
                 Books hard to follow, and YouTube letting you down?
                 <span>Learn magic the right way.</span>
-              </h1>
+              </p>
               <p>
                 Lorem ipsum dolor sit <a href="#">amet, consectetur adipiscing</a> elit. Donec
                 placerat, ipsum ac auctor ornare, nunc ligula scelerisque eros.
@@ -77,7 +78,7 @@
         <div class="container">
           <h2>Join now and get access to our entire library of tricks</h2>
           <ul class="split-gap">
-            <li class="gap">
+            <li class="gap corner-square">
               <img
                 class="shadow"
                 src="assets/all-access-03.jpg"
@@ -86,7 +87,7 @@
               <h3>Step-by-step instruction</h3>
               <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
             </li>
-            <li class="gap">
+            <li class="gap corner-square">
               <img
                 class="shadow"
                 src="assets/all-access-04.jpg"
@@ -95,7 +96,7 @@
               <h3>1-on-1 mentoring</h3>
               <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
             </li>
-            <li class="gap">
+            <li class="gap corner-square">
               <img
                 class="shadow"
                 src="assets/all-access-01.jpg"
@@ -104,7 +105,7 @@
               <h3>Video lessons</h3>
               <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
             </li>
-            <li class="gap">
+            <li class="gap corner-square">
               <img
                 class="shadow"
                 src="assets/all-access-02.jpg"
@@ -117,15 +118,66 @@
         </div>
       </section>
 
-      <section class="bg-dark cta">
+      <section class="cta bg-accent">
         <div class="container gap gap--large">
-          <h2>You’re only one step away</h2>
+          <h2 class="section-title">Start learning magic today</h2>
+          <p class="h2">You’re only one step away</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor
             ornare.
           </p>
           <a href="#" class="btn">Start Learning</a>
         </div>
+      </section>
+
+      <section class="testimonials">
+        <div class="container gap gap--large">
+          <h2 class="section-title">Testimonials</h2>
+          <p class="h2">Others have done it, so can you!</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor
+            ornare, nunc ligula scelerisque eros.
+          </p>
+          <div class="split-gap">
+            <div class="testimonial bg-dark corner-square">
+              <p>
+                Commodo risus non cursus risus, metus, velit scelerisque urna, aenean leo diam arcu
+                sed arcu purus sagittis posuere orci ornare lorem risus malesuada nec sit
+              </p>
+              <p class="name">John Smith</p>
+              <p class="position">CEO of Company</p>
+            </div>
+            <div class="testimonial bg-accent corner-square">
+              <p>
+                Commodo risus non cursus risus, metus, velit scelerisque urna, aenean leo diam arcu
+                sed arcu purus sagittis posuere orci ornare lorem risus malesuada nec sit
+              </p>
+              <p class="name">John Smith</p>
+              <p class="position">CEO of Company</p>
+            </div>
+            <div class="testimonial bg-dark corner-square">
+              <p>
+                Commodo risus non cursus risus, metus, velit scelerisque urna, aenean leo diam arcu
+                sed arcu purus sagittis posuere orci ornare lorem risus malesuada nec sit
+              </p>
+              <p class="name">John Smith</p>
+              <p class="position">CEO of Company</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="cta bg-light">
+        <div class="container gap gap--large">
+          <h2 class="section-title">Start learning magic today</h2>
+          <p class="h2">You’re only one step away</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor
+            ornare.
+          </p>
+          <a href="#" class="btn">Start Learning</a>
+        </div>
+        <!-- /container -->
       </section>
     </main>
   </body>
