--- a/index.html
+++ b/index.html
@@ -3,78 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Demystified | Challenge #1</title>
+    <title>CSS Demystified | Challenge #2</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-    <main>
-      <div class="container">
-        <h1>Great product. Great features.</h1>
-        <p class="subtitle">
-          We have a lot of faith that our product is what you need to achieve all of your goals.
-          Below are only our favorite features, but it can do much, much more!
-        </p>
-        <div class="cards">
-          <!-- card #1 -->
-          <div class="card">
-            <h2 class="bg-green">Fast</h2>
-            <p>
-              Quis placerat aliquam blandit integer morbi tristique interdum morbi sed at lectus et
-              in urna
-            </p>
-          </div>
-
-          <!-- card #2 -->
-          <div class="card">
-            <h2 class="bg-purple">Affordable</h2>
-            <p>
-              Malesuada nec dignissim aliquet lectus enim, viverra diam, porttitor sit tempus
-              egestas non nibh commodo eget maecenas augue
-            </p>
-          </div>
-
-          <!-- card #3 -->
-          <div class="card">
-            <h2 class="bg-orange">Reliable</h2>
-            <p>
-              Ut vestibulum egestas ornare scelerisque ac, nunc, nunc amet nec augue tempus, urna
-              eleifend ultrices vel eu massa
-            </p>
-          </div>
-
-          <!-- card #4 -->
-          <div class="card">
-            <h2 class="bg-pink">Simple</h2>
-            <p>
-              Sed sed neque, adipiscing scelerisque maecenas eu eros accumsan, sollicitudin
-              convallis feugiat congue euismod proin libero, tristique justo
-            </p>
-          </div>
-
-          <!-- card #5 -->
-          <div class="card">
-            <h2 class="bg-blue">Robust</h2>
-            <p>
-              Sem nulla diam nascetur sed leo magna interdum arcu nulla amet facilisis erat ornare
-              ac tincidunt turpis erat
-            </p>
-          </div>
-
-          <!-- card #6 -->
-          <div class="card">
-            <h2 class="bg-red">Flexible</h2>
-            <p>
-              Eu consequat mauris fermentum phasellus vitae ipsum dignissim id lectus turpis eget ac
-              viverra at porttitor a diam
-            </p>
-          </div>
-        </div>
-      </div>
-    </main>
+    <div class="cta">
+      <h2 class="section-title">A catchy headline</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna. Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna.
+      </p>
+      <p>
+        <a href="#" class="btn btn-primary">Click me </a>
+        <a href="#" class="btn btn-secondary">Click me </a>
+        <a href="#" class="btn btn-outline">Click me</a>
+      </p>
+    </div>
+    <div class="cta">
+      <h2 class="section-title">A catchy headline</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna. Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna.
+      </p>
+      <p>
+        <a href="#" class="btn btn-primary">Click me</a>
+        <a href="#" class="btn btn-secondary">Click me</a>
+        <a href="#" class="btn btn-outline">Click me</a>
+      </p>
+    </div>
+    <div class="cta bg-accent">
+      <h2 class="section-title">A catchy headline</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna. Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna.
+      </p>
+      <p>
+        <a href="#" class="btn btn-primary">Click me</a>
+        <a href="#" class="btn btn-secondary">Click me</a>
+        <a href="#" class="btn btn-outline">Click me</a>
+      </p>
+    </div>
+    <div class="cta bg-dark">
+      <h2 class="section-title">A catchy headline</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna. Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna.
+      </p>
+      <p>
+        <a href="#" class="btn btn-primary">Click me</a>
+        <a href="#" class="btn btn-secondary">Click me</a>
+        <a href="#" class="btn btn-outline">Click me</a>
+      </p>
+    </div>
   </body>
 </html>
