--- a/index.html
+++ b/index.html
@@ -11,51 +11,33 @@
   <!-- lesson specific CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>main-sidebar</title>
-</head> 
+  <title>Even columns</title>
+</head>
 
 <body>
-  <div class="flex-layout">
-    <header>
-      <img src="img/logo.svg" alt="logoipsum" class="logo">
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <div class="flow">
-        <h1>Flexible layout</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga laborum asperiores temporibus tempora
-          doloribus
-          natus soluta id perspiciatis voluptas nesciunt quod ab voluptate esse assumenda enim, ex, mollitia maiores
-          similique autem consequuntur saepe sunt consectetur!</p>
-        <p>Eum blanditiis, nulla magnam praesentium temporibus id esse officia eos libero explicabo quaerat quia
-          maiores
-          reiciendis veniam aspernatur tempore officiis iure. Pariatur deserunt, nostrum neque nulla harum expedita
-          non
-          labore consectetur culpa laudantium, vel excepturi!</p>
-        <p>Eligendi, impedit ipsam? Maxime a in doloremque quis atque natus rem mollitia, fugit voluptates est illum
-          ab
-          alias magnam quaerat, vel inventore, sequi aspernatur ipsam autem? Nesciunt a laudantium molestias ipsum
-          sunt
-          ipsa vel fuga!</p>
-        <p>Sed sapiente minima aliquid perspiciatis modi fuga, praesentium iure quam quisquam nihil quasi aliquam?
-          Provident nam repellat amet minima explicabo culpa necessitatibus, libero quae velit ab ex voluptas in unde
-          et
-          eos iste corrupti accusamus.</p>
-        <p>Unde rerum incidunt voluptas temporibus iste corrupti, soluta minus officiis! Reprehenderit aspernatur ea
-          odio
-          eum minus, eaque amet! Inventore accusamus aperiam pariatur vitae iste, magnam fuga quibusdam repellendus
-          distinctio doloribus veniam odio consequatur ducimus. Suscipit.</p>
-      </div>
-    </main>
+  <div class="container">
+    <h1>even columns, every time</h1>
 
+    <div class="even-columns">
+      <div>
+        <h2>Hello world</h2>
+        <p>Lorem ipsum dol.</p>
+      </div>
+
+      <div>
+        <h2>We're getting flexible</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi.</p>
+        <p>Officiis libero, molestias sed amet deleniti ipsum laborum rerum adipisci.</p>
+        <p>Ipsum dolor sit amet consectetur, adipisicing elit. Hic, vero?</p>
+        <p>Accusantium, non quas sit quae similique fugit ullam perspiciatis consequuntur.</p>
+        <p>Dolor sit amet consectetur adipisicing elit. Totam, facilis!</p>
+      </div>
+      <div>
+        <h2>It's time for a stretch</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi.</p>
+        <p>Officiis libero, molestias sed amet deleniti ipsum laborum rerum adipisci.</p>
+      </div>
+    </div>
   </div>
 </body>
 
