--- a/index.html
+++ b/index.html
@@ -28,13 +28,62 @@
         </ul>
       </nav>
     </header>
-
+    
+    <div class="albatross">
+      <div class="card">
+        <img src="img/flexible-1.jpg" alt="">
+        <h3>Flexbox is flexible</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
+          eligendi
+          dolores
+          natus beatae esse deleniti minima explicabo iusto ratione, ipsa consectetur?</p>
+      </div>
+      <div class="card">
+        <img src="img/flexible-2.jpg" alt="">
+        <h3>Flexbox is flexible</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
+          eligendi
+          dolores
+          natus beatae esse deleniti minima explicabo iusto ratione, ipsa consectetur?</p>
+      </div>
+      <div class="card">
+        <img src="img/flexible-3.jpg" alt="">
+        <h3>Flexbox is flexible</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
+          eligendi
+          dolores
+      </div>
+    </div>
     <div class="container">
       <div class="content-sidebar">
         <aside>
           <h2>A little about me</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum distinctio minima unde ea enim voluptatum
             incidunt, aut vel eos molestias!</p>
+          <div class="albatross">
+            <div class="card">
+              <img src="img/flexible-1.jpg" alt="">
+              <h3>Flexbox is flexible</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
+                eligendi
+                dolores
+                natus beatae esse deleniti minima explicabo iusto ratione, ipsa consectetur?</p>
+            </div>
+            <div class="card">
+              <img src="img/flexible-2.jpg" alt="">
+              <h3>Flexbox is flexible</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
+                eligendi
+                dolores
+                natus beatae esse deleniti minima explicabo iusto ratione, ipsa consectetur?</p>
+            </div>
+            <div class="card">
+              <img src="img/flexible-3.jpg" alt="">
+              <h3>Flexbox is flexible</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
+                eligendi
+                dolores
+            </div>
         </aside>
         <main>
           <div class="flow">
@@ -43,71 +92,32 @@
               doloribus
               natus soluta id perspiciatis voluptas nesciunt quod ab voluptate esse assumenda enim, ex, mollitia maiores
               similique autem consequuntur saepe sunt consectetur!</p>
-            <div class="grid-ish">
-              <div class="card">
-                <img src="img/flexible-1.jpg" alt="">
-                <h3>Flexbox is flexible</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
-                  eligendi
-                  dolores
-                  natus beatae esse deleniti minima explicabo iusto ratione, ipsa consectetur?</p>
-              </div>
-              <div class="card">
-                <img src="img/flexible-2.jpg" alt="">
-                <h3>Flexbox is flexible</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
-                  eligendi
-                  dolores
-                  natus beatae esse deleniti minima explicabo iusto ratione, ipsa consectetur?</p>
-              </div>
-              <div class="card">
-                <img src="img/flexible-3.jpg" alt="">
-                <h3>Flexbox is flexible</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
-                  eligendi
-                  dolores
-              </div>
-              <div class="card">
-                <img src="img/flexible-1.jpg" alt="">
-                <h3>Flexbox is flexible</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
-                  eligendi
-                  dolores
-                  natus beatae esse deleniti minima explicabo iusto ratione, ipsa consectetur?</p>
-              </div>
-              <div class="card">
-                <img src="img/flexible-2.jpg" alt="">
-                <h3>Flexbox is flexible</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maxime quos reiciendis aliquam
-                  eligendi
-                  dolores
-                  natus beatae esse deleniti minima explicabo iusto ratione, ipsa consectetur?</p>
-              </div>
-            </div>
-            <p>Eum blanditiis, nulla magnam praesentium temporibus id esse officia eos libero explicabo quaerat quia
-              maiores
-              reiciendis veniam aspernatur tempore officiis iure. Pariatur deserunt, nostrum neque nulla harum expedita
-              non
-              labore consectetur culpa laudantium, vel excepturi!</p>
-            <p>Eligendi, impedit ipsam? Maxime a in doloremque quis atque natus rem mollitia, fugit voluptates est illum
-              ab
-              alias magnam quaerat, vel inventore, sequi aspernatur ipsam autem? Nesciunt a laudantium molestias ipsum
-              sunt
-              ipsa vel fuga!</p>
-            <p>Sed sapiente minima aliquid perspiciatis modi fuga, praesentium iure quam quisquam nihil quasi aliquam?
-              Provident nam repellat amet minima explicabo culpa necessitatibus, libero quae velit ab ex voluptas in
-              unde
-              et
-              eos iste corrupti accusamus.</p>
-            <p>Unde rerum incidunt voluptas temporibus iste corrupti, soluta minus officiis! Reprehenderit aspernatur ea
-              odio
-              eum minus, eaque amet! Inventore accusamus aperiam pariatur vitae iste, magnam fuga quibusdam repellendus
-              distinctio doloribus veniam odio consequatur ducimus. Suscipit.</p>
-          </div>
-        </main>
 
+          </div>
+          <p>Eum blanditiis, nulla magnam praesentium temporibus id esse officia eos libero explicabo quaerat quia
+            maiores
+            reiciendis veniam aspernatur tempore officiis iure. Pariatur deserunt, nostrum neque nulla harum expedita
+            non
+            labore consectetur culpa laudantium, vel excepturi!</p>
+          <p>Eligendi, impedit ipsam? Maxime a in doloremque quis atque natus rem mollitia, fugit voluptates est illum
+            ab
+            alias magnam quaerat, vel inventore, sequi aspernatur ipsam autem? Nesciunt a laudantium molestias ipsum
+            sunt
+            ipsa vel fuga!</p>
+          <p>Sed sapiente minima aliquid perspiciatis modi fuga, praesentium iure quam quisquam nihil quasi aliquam?
+            Provident nam repellat amet minima explicabo culpa necessitatibus, libero quae velit ab ex voluptas in
+            unde
+            et
+            eos iste corrupti accusamus.</p>
+          <p>Unde rerum incidunt voluptas temporibus iste corrupti, soluta minus officiis! Reprehenderit aspernatur ea
+            odio
+            eum minus, eaque amet! Inventore accusamus aperiam pariatur vitae iste, magnam fuga quibusdam repellendus
+            distinctio doloribus veniam odio consequatur ducimus. Suscipit.</p>
       </div>
+      </main>
+
     </div>
+  </div>
   </div>
 </body>
 
